2009-12-07  Kent Tamura  <tkent@chromium.org>

Reviewed by Darin Adler.

        Some changes to ValidityState-typeMismatch-url.html.
        https://bugs.webkit.org/show_bug.cgi?id=29913

        - Add more test cases
          Username, IPv6 address, mailto:, file:, tel:, fragment, and IDN.
        - Handle difference between KURL and KURLGoogle

        * fast/forms/ValidityState-typeMismatch-url-expected.txt:
        * fast/forms/script-tests/ValidityState-typeMismatch-url.js:
2009-12-07  Kent Tamura  <tkent@chromium.org>

        Reviewed by Darin Adler.

        Fix a bug that KURL rejects a host name which has an IPv4 address
        inside an IPv6 form like [::127.0.0.1].
        https://bugs.webkit.org/show_bug.cgi?id=29913

        * platform/KURL.cpp:
        (WebCore::characterClassTable): Add IPv6Char to '.'.

Canonical link: https://commits.webkit.org/43224@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51799 268f45cc-cd09-0410-ab3c-d52691b4dbfc